# career-ai

./: .gitattributes  .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/v1/: health.py
docs/adr/: ADR-001.md  ADR-002.md  ADR-003.md
docs/architecture/: README.md  backend-architecture.md  system-overview.md  technology-stack.md
docs/learning/: 2026-07-09.md
